CONSTRUÇÃO INICIAL DO MENU. V1.2

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -64,7 +64,7 @@
             <h2 class="text-center mb-4">ÁREA DE TREINO</h2>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-dark w-100 mb-3">Treino</a>
+                    <a href="/treinos" class="btn btn-dark w-100 mb-3">Treino</a>
                     <a href="#" class="btn btn-dark w-100 mb-4">Solicitar Treino</a>
                 </div>
             </div>
