CONSTRUÇÃO DO CHAT. V1.0

--- a/app/templates/telaTreino.html
+++ b/app/templates/telaTreino.html
@@ -255,7 +255,7 @@
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container justify-content-around">
             <a class="nav-link text-black" href="/menu">Menu</a>
-            <a class="nav-link text-black" href="#">Chat</a>
+            <a class="nav-link text-black" href="/chatbot">Chat</a>
             <a class="nav-link text-black" href="#">Acompanhamento</a>
         </div>
     </nav>
