--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container justify-content-around">
             <a class="nav-link text-black" href="#">Menu</a>
-            <a class="nav-link text-black" href="#">Chat</a>
+            <a class="nav-link text-black" href="/chatbot">Chat</a>
             <a class="nav-link text-black" href="#">Acompanhamento</a>
         </div>
     </nav>
