CONSTRUÇÃO DA TELA DE SOLICITAR TREINO E BD.

--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -52,7 +52,7 @@
 <body>
 
     <div class="chat-container">
-        <img src="/static/img/p4chat.png" alt="Logo Chatbot" style="width: 120px;height: 120px; margin-left: 270px;">
+        <img src="/static/img/p4chatbot.png" alt="Logo Chatbot" style="width: 120px;height: 120px; margin-left: 270px;">
         <h2 class="text-center mb-4">OLÁ! COMO POSSO TE AJUDAR HOJE?</h2>
 
         <div id="chat-box" class="chat-box"></div>
