--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -65,7 +65,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
                     <a href="/treinos" class="btn btn-dark w-100 mb-3">Treino</a>
-                    <a href="#" class="btn btn-dark w-100 mb-4">Solicitar Treino</a>
+                    <a href="/solicitar-treino" class="btn btn-dark w-100 mb-4">Solicitar Treino</a>
                 </div>
             </div>
         </section>
