VERSÃO FINAL DO MENU.

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -74,8 +74,8 @@
             <h2 class="text-center mb-4">ÁREA DE ROTINA</h2>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-dark w-100 mb-3">Rotina</a>
-                    <a href="#" class="btn btn-dark w-100">Solicitar Rotina</a>
+                    <a href="/rotina" class="btn btn-dark w-100 mb-3">Rotina</a>
+                    <a href="/solicitar-rotina" class="btn btn-dark w-100">Solicitar Rotina</a>
                 </div>
             </div>
         </section>
@@ -85,7 +85,7 @@
         <div class="container justify-content-around">
             <a class="nav-link text-black" href="#">Menu</a>
             <a class="nav-link text-black" href="/chatbot">Chat</a>
-            <a class="nav-link text-black" href="#">Acompanhamento</a>
+            <a class="nav-link text-black" href="/acompanhamento">Acompanhamento</a>
         </div>
     </nav>
 
