--- a/app/templates/telaLogin.html
+++ b/app/templates/telaLogin.html
@@ -36,7 +36,7 @@
 
     <form action="/login" method="post">
       <div class="row-5">
-        <input type="text" name="matricula" class="text-center mt-3" placeholder="MATRÍCULA" required>
+        <input type="text" name="email" class="text-center mt-3" placeholder="E-MAIL" required>
         <br>
         <input type="password" name="senha" class="text-center mt-1" placeholder="SENHA" required>
       </div>
