--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Menu - P4 WORKOUT</title>
@@ -51,12 +51,18 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
 
-    <header class="text-center py-3">
-        <h1>P<span>4</span> WORKOUT</h1>
+    <header class="position-relative text-center py-3">
+        <div class="position-absolute top-0 end-0 p-3">
+            <form action="/logout" method="POST">
+                <button type="submit" class="btn btn-danger">Encerrar Sessão</button>
+            </form>
+        </div>
+        <h1 class="m-0">P<span>4</span> WORKOUT</h1>
         {% if nome_usuario %}
             <h3 class="text-white mt-2">SEJA BEM-VINDO, {{ nome_usuario }}!</h3>
         {%endif%}
         <h4 class="text-white mt-2">HOJE É {{ dia_atual }}</h4>
+
     </header>
 
     <main class="flex-grow-1 container text-center my-4">
