V1 - COMUNICAÇÃO ENTRE ALUNO E PROFESSOR.

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -71,7 +71,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
                     <a href="/treinos" class="btn btn-dark w-100 mb-3">Treino</a>
-                    <a href="/solicitar-treino" class="btn btn-dark w-100 mb-4">Solicitar Treino</a>
+                    <a href="/profissionais-ed-fisica" class="btn btn-dark w-100 mb-4">Solicitar Treino</a>
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6">
                     <a href="/rotina" class="btn btn-dark w-100 mb-3">Rotina</a>
-                    <a href="/solicitar-rotina" class="btn btn-dark w-100">Solicitar Rotina</a>
+                    <a href="/profissionais-nutricao" class="btn btn-dark w-100">Solicitar Rotina</a>
                 </div>
             </div>
         </section>
