--- a/app/templates/telaSolicitacoes.html
+++ b/app/templates/telaSolicitacoes.html
@@ -18,6 +18,7 @@
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <div>
             <strong>Aluno:</strong> {{ s.aluno }} <br>
+            <small>Mensagem: {{ s.mensagem }}</small><br>
             <small>Data: {{ s.data }}</small>
           </div>
           <div>
